feat(plant-products): pp-051a — widen the document upload contract for plant document types
DocumentType gains the eight plant-only values the CHED-PP reference
list needs — cargo manifest, inspection certificate, phytosanitary
certificate, origin certificate, heat treatment certificate, container
manifest, customs declaration and conformity certificate. The fourteen
existing live-animals constants are untouched and unreordered; this is
the one generic upload contract both sets share, so widening it is
purely additive.

Also adds a test pinning the checked-in cdp.uploader.mime-types default
in application.yml to the frontend's allowlist, so the two cannot drift
apart unnoticed.

Increment pp-051a.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>